--- a/doc/general.texi
+++ b/doc/general.texi
@@ -476,8 +476,9 @@ following image formats are supported:
 @item Creative YUV (CYUV)    @tab     @tab  X
 @item DFA                    @tab     @tab  X
     @tab Codec used in Chronomaster game.
-@item Dirac                  @tab  E  @tab  E
-    @tab supported through external library libschroedinger
+@item Dirac                  @tab  E  @tab  X
+    @tab encoding supported through external library libschroedinger, decoding
+         supported through either libschroedinger or native decoder
 @item Deluxe Paint Animation @tab     @tab  X
 @item DNxHD                  @tab   X @tab  X
     @tab aka SMPTE VC3
